--- a/Module 2/ManageProfile.html
+++ b/Module 2/ManageProfile.html
@@ -61,7 +61,7 @@
       <!--Content-->
       <div class="content">
         <div class="margin"> 
-          <div class="" id="profile"> <img src="assets/profile.jpg" alt="Image" style="float: left; margin-right: 10px; border-radius: 50%; width: 150px; height: 150px;">
+          <div class="" id="profile"> <img src="profile.jpg" alt="Image" style="float: left; margin-right: 10px; border-radius: 50%; width: 150px; height: 150px;">
         </div>
         <div class="float-buttons">
           <button class="float-button grey">Edit</button>
