--- a/Module 2/ManageQuestion.html
+++ b/Module 2/ManageQuestion.html
@@ -166,7 +166,7 @@
         // Add a click event listener to the button
         createButton.addEventListener("click", function() {
           // Redirect the user to the next page
-          window.location.href = "AddQues.html";
+          window.location.href = "AddQues.php";
         });
       </script>
 
