--- a/Module2/Dashboard.html
+++ b/Module2/Dashboard.html
@@ -53,7 +53,7 @@
 
       <div class="heading">
         <div class="container-fluid" style="margin:10px">
-          <a class="navbar-brand" href="#">TOPIC</a>
+          <a class="navbar-brand" href="#"><strong>TOPIC</strong></a>
         </div>
     </div>
 
@@ -102,7 +102,7 @@
                         <a href="Dashboard.html" class="list-group-item list-group-item-action py-2 ripple " aria-current="true">
                         <span>Dashboard</span>
                         </a>
-                        <a href="ManageQuestion.html" class="list-group-item list-group-item-action py-2 ripple "
+                        <a href="ManageQuestion.php" class="list-group-item list-group-item-action py-2 ripple "
                         ><span>Manage Question</span>
                       </a>
                         <a href="ManageProfile.html" class="list-group-item list-group-item-action py-2 ripple "
