--- a/Module2/Dashboard.html
+++ b/Module2/Dashboard.html
@@ -96,7 +96,7 @@
       <!--Side navbar-->
                 <!-- Sidebar -->
                 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse">
-                    <div class="" id="logoump"><img src ="assets/logoFK.png" alt="Logo UMP" srcset=""style="margin-top: -20px;"></div>
+                    <div class="" id="logoump"><img src ="logoFK.png" alt="Logo UMP" srcset=""style="margin-top: -20px;"></div>
                     <div class="position-sticky" >
                       <div class="list-group list-group-flush mx-3 mt-4" >
                         <a href="Dashboard.html" class="list-group-item list-group-item-action py-2 ripple " aria-current="true">
