--- a/Module2/ManageProfile.html
+++ b/Module2/ManageProfile.html
@@ -78,7 +78,7 @@
                 <th>Name</th>
                 <th>Matric ID</th>
                 <th>Phone Number</th>
-                <th>Adress</th>
+                <th>Address</th>
               </tr>
             </thead>
             <tbody>
@@ -112,7 +112,7 @@
       <!--Side navbar-->
                 <!-- Sidebar -->
                 <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse">
-                    <div class="" id="logoump"><img src ="assets/logoFK.png" alt="Logo UMP" srcset=""style="margin-top: -20px;"></div>
+                    <div class="" id="logoump"><img src ="logoFK.png" alt="Logo UMP" srcset=""style="margin-top: -20px;"></div>
                     <div class="position-sticky" >
                       <div class="list-group list-group-flush mx-3 mt-4" >
                         <a href="Dashboard.html" class="list-group-item list-group-item-action py-2 ripple " aria-current="true">
